package survival2d.misc;

public class MiscCommand {
  public static final String PING = "ping";
  public static final String PING_BY_PLAYER_MOVE = "pingByPlayerMove";
  public static final String PING_BY_MATCH_INFO = "pingByMatchInfo";
}
