@startuml

title __MISC's Class Diagram__\n

  namespace survival2d {
    namespace misc {
      class survival2d.misc.AppServerReadyController {
          + handle()
      }
    }
  }
  

  namespace survival2d {
    namespace misc {
      class survival2d.misc.MiscCommand {
          {static} + PING_BY_PLAYER_MOVE : String
      }
    }
  }
  

  namespace survival2d {
    namespace misc {
      class survival2d.misc.PingController {
          - responseFactory : EzyResponseFactory
          + handlePlayerMove()
          + ping()
      }
    }
  }
  

  namespace survival2d {
    namespace misc {
      class survival2d.misc.PluginServerReadyController {
          + handle()
      }
    }
  }
  

  namespace survival2d {
    namespace misc {
      class survival2d.misc.StreamingController {
          {static} - log : Logger
          + handle()
      }
    }
  }
  

  survival2d.misc.AppServerReadyController -up-|> com.tvd12.ezyfoxserver.controller.EzyAbstractAppEventController
  survival2d.misc.PluginServerReadyController -up-|> com.tvd12.ezyfoxserver.controller.EzyAbstractPluginEventController
  survival2d.misc.StreamingController -up-|> com.tvd12.ezyfoxserver.controller.EzyAbstractZoneEventController
  survival2d.misc.StreamingController o-- survival2d.service.MatchingService : matchingService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
